# takyon

./: .gitmodules  ;  CMakeLists.txt  Cargo.toml  README.md  ReadMe.org  example.lua  styles.css
include/: audio.h  event.h  globals.h  graph.h  lua_bindings.h  lua_engine.h  nodes.h  pattern.h  voice.h
lua/: runtime.lua
src/: app.rs  audio.cpp  graph.cpp  lua_bindings.cpp  lua_engine.cpp  main.cpp  nodes.cpp  voice.cpp
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
